// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player snapshot testing 1`] = `
<div
  className="player "
>
  <div
    className="playerText"
  >
    Di Kun Ong
  </div>
  <div
    className="playerScore"
  >
    4
  </div>
</div>
`;

exports[`Player snapshot testing 2`] = `
<div
  className="player "
>
  <div
    className="playerText"
  >
    Alex Verkerk
  </div>
  <div
    className="playerScore"
  />
  <div
    className="playerDivider"
  />
</div>
`;

exports[`Player snapshot testing 3`] = `
<div
  className="player "
>
  <div
    className="playerText"
  >
    Rawiri Hohepa
  </div>
  <div
    className="playerIndicator"
  >
    HOST
  </div>
  <div
    className="playerScore"
  />
</div>
`;

exports[`Player snapshot testing 4`] = `
<div
  className="player playerMe"
>
  <div
    className="playerText"
  >
    Tait Fuller
  </div>
  <div
    className="playerScore"
  >
    3
  </div>
</div>
`;
